--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>org.homedepot</groupId>
     <artifactId>store-retreive</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>store-retreive</name>
     <description>Demo project for Spring Boot</description>
