--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,7 @@
 ---
 applications:
 - name: store-retreive
-  memory: 512MB
+  memory: 1GB
   host: store-retreive
-  domain: apps-np.homedepot.com
   path: target/store-retreive-0.0.1-SNAPSHOT.war
-  buildpack: java_buildpack_offline
+  buildpack: java_buildpack
