--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,43 +11,31 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: circleci-demo-java-spring-{{ checksum "pom.xml" }}
+          key: store-retreive-{{ checksum "pom.xml" }}
       - run: mvn dependency:go-offline
       - save_cache:
           paths:
             - ~/.m2
-          key: circleci-demo-java-spring-{{ checksum "pom.xml" }}
+          key: store-retreive-{{ checksum "pom.xml" }}
       - run: mvn package
       - store_test_results:
           path: target/surefire-reports
       - store_artifacts:
           path: target/demo-java-spring-0.0.1-SNAPSHOT.jar
       - run: mvn test
-  deploy:
-      machine:
-          enabled: true
-      working_directory: ~/store-retreive
-      environment:
-        HEROKU_APP: "sleepy-refuge-55486"
-      steps:
-        - checkout
-        - run:
-            name: Setup Heroku
-            command: bash .circleci/setup-heroku.sh
-        - run:
-            command: |
-              git push heroku sequential-branch-filter:master
-              heroku run rake db:migrate
-              sleep 5  # sleep for 5 seconds to wait for dynos
-              heroku restart
+  deployment:
+    production:
+      branch: master
+      commands:
+        - ./deploy_staging.sh
 workflows:
   version: 2
   build-and-deploy:
     jobs:
       - build
-      - deploy:
+      - deployment:
           requires:
             - build
           filters:
             branches:
-              only: sequential-branch-filter
+              only: master
