--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,12 +11,12 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: store-retreive-{{ checksum "pom.xml" }}
+          key: circleci-demo-java-spring-{{ checksum "pom.xml" }}
       - run: mvn dependency:go-offline
       - save_cache:
           paths:
             - ~/.m2
-          key: store-retreive-{{ checksum "pom.xml" }}
+          key: circleci-demo-java-spring-{{ checksum "pom.xml" }}
       - run: mvn package
       - store_test_results:
           path: target/surefire-reports
@@ -25,6 +25,10 @@ jobs:
       - run: mvn test
   deployment:
     production:
+      branch: production
+      commands:
+        - ./deploy_prod.sh
+    staging:
       branch: master
       commands:
         - ./deploy_staging.sh
@@ -33,9 +37,9 @@ workflows:
   build-and-deploy:
     jobs:
       - build
-      - deployment:
+      - deploy:
           requires:
             - build
           filters:
             branches:
-              only: master
+              only: sequential-branch-filter
