--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,15 +23,23 @@ jobs:
       - store_artifacts:
           path: target/demo-java-spring-0.0.1-SNAPSHOT.jar
       - run: mvn test
-  deployment:
-    production:
-      branch: production
-      commands:
-        - ./deploy_prod.sh
-    staging:
-      branch: master
-      commands:
-        - ./deploy_staging.sh
+  deploy:
+      machine:
+          enabled: true
+      working_directory: ~/store-retreive
+      environment:
+        HEROKU_APP: "sleepy-refuge-55486"
+      steps:
+        - checkout
+        - run:
+            name: Setup Heroku
+            command: bash .circleci/setup-heroku.sh
+        - run:
+            command: |
+              git push heroku sequential-branch-filter:master
+              heroku run rake db:migrate
+              sleep 5  # sleep for 5 seconds to wait for dynos
+              heroku restart
 workflows:
   version: 2
   build-and-deploy:
@@ -42,4 +50,4 @@ workflows:
             - build
           filters:
             branches:
-              only: sequential-branch-filter
+              only: master
