--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -10,6 +10,13 @@
 
     <name>store-retreive</name>
     <description>Demo project for Spring Boot</description>
+    <distributionManagement>
+        <repository>
+            <id>central</id>
+            <name>7174b73cdf1c-releases</name>
+            <url>http://ec2-34-212-9-250.us-west-2.compute.amazonaws.com:8081/artifactory/libs-release</url>
+        </repository>
+    </distributionManagement>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -67,6 +74,5 @@
             </plugin>
         </plugins>
     </build>
-
 
 </project>
