--- a/pom.xml
+++ b/pom.xml
@@ -10,27 +10,21 @@
 
     <name>store-retreive</name>
     <description>Demo project for Spring Boot</description>
-    <distributionManagement>
-        <repository>
-            <id>central</id>
-            <name>7174b73cdf1c-releases</name>
-            <url>http://ec2-34-212-9-250.us-west-2.compute.amazonaws.com:8081/artifactory/libs-release</url>
-        </repository>
-    </distributionManagement>
-
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.5.6.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <sonar.projectName>store-retreive</sonar.projectName>
+        <sonar.projectVersion>master</sonar.projectVersion>
+        <!--<sonar.test.exclusions>**/test/**/*.*</sonar.test.exclusions>-->
+        <!--<sonar.exclusions>**/ai/**/*.*,**/jdbc/**/*.*,**/mpt/**/*.*,**/jcr/**/*.*,**/JDBC*</sonar.exclusions>-->
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>io.springfox</groupId>
@@ -63,7 +57,6 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 
     <build>
@@ -73,6 +66,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+
     </build>
 
 </project>
